--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A CRDT string manipulation library for concurrent editing/",
   "main": "index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "mocha --timeout 10000"
   },
   "repository": {
     "type": "git",
